style.css
body {
    margin: 0;
    padding: 0;
}

.container {
    display: grid;
    grid-template: 1.5fr 9fr / 2fr 9fr;
}

.container > div {
    padding: 15px;
}

.header {
    background-color: #D9D9D9;
    display: grid;
    grid-template: 1fr 1fr / 1fr 1fr;
    gap: 10px;
}

.header-top-left, .header-top-right {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.header-top-left > *:first-of-type {
    display: flex;
    align-items: center;
}

.search-icon {
    margin-right: 8px;
}

.header-top-right > *:first-of-type {
    display: flex;
    align-items: center;
}

.profile-icon {
    margin-left: 20px;
}

.header-icons, .header-buttons {
    margin-left: auto;
}

.search-bar {
    width: 450px;
    height: 31px;
    border-radius: 8px;
    border: 0px solid;
    padding: 5px;
}

.header-bottom-left {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: end;
}

.header-bottom-left > * {
    font-family: Optima, Candara, 'Noto Sans', source-sans-pro, sans-serif;
    font-weight: 900;
    font-size: 16px;
    margin: 0;
}

.header-bottom-left > *:last-child {
    font-size: 28px;
}

.header-bottom-right {
    display: flex;
    justify-content: end;
    align-items: end;
}

.header-bottom-right > * {
    background-color: #3B29FF;
    color: white;
    border: none;
    padding: 7px 16px 10px 16px;
    margin: 10px;
    margin-bottom: 0;
    border-radius: 32px;
    font-family: Avenir;
    font-weight: 400;
    margin-bottom: 5px;
}

button:last-child {
    margin-right: 0;
}

.sidebar {
    background-color: #3B29FF;
    grid-row: 1 / 3;
    display: grid;
    grid-template: 100px repeat(auto-fit, minmax(1px, 1fr)) / 1fr;

}

.logo {
    max-width: 247px;
    margin-top: 1em;
}

.side-menu-1, .side-menu-2 {
    list-style-type: none;
    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: 400;
    font-size: 26px;
    font-style: italic;
    color: white;
}

.side-menu-1 > div, .side-menu-2 > div {
    display: grid;
    grid-template: 50px / 40px 150px;
    align-items: center;
}

ul {
    padding-inline-start: 0;
}

.main {
    background-color: white;
    display: grid;
    grid-template: 0.5fr 9fr / 5fr 2.5fr;
    gap: 15px;
}

h2 {
    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: normal;
}

.cards {
    display: grid;
    grid-template: repeat(auto-fit, minmax(250px, 0.2fr)) / repeat(auto-fit, minmax(250px, 0.5fr));
    gap: 15px;
}

.card {
    display: grid;
    grid-template: 0.2fr 1fr / 1fr;
}

.card-top {
    display: flex;
    border-style: solid;
    border-width: 0.5px;
    border-radius: 16px 16px 0 0;
    background-color: #D7D2EE;
}

.card-top h3 {
    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: 800;
}

.card-bottom {
    border-left: 0.5px solid;
    border-bottom: 0.5px solid;
    border-right: 0.5px solid;
    border-radius: 0 0 16px 16px;
    display: grid;
    gap: 15px;
}

.card h3 {
    align-self: center;
    margin: 10px;
}

.card p {
    margin: 10px;
    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: 350;
    font-style: italic;
}

.card-icons {
    justify-self: end;
    align-self: end;
    margin: 15px;
    margin-right: 20px;
}

.card-icons img {
    margin: 5px;
    width: 20px;
    height: 20px;
}

.others {
    display: grid;
    grid-template: repeat(auto-fit, minmax(50px, 0.5fr)), 0.1fr, repeat(auto-fit, minmax(150px, 1fr)) / 1fr;
}

.others h2 {
    align-self: center;
}

.announcements {
    border-style: solid;
    border-width: 0.5px;
    border-radius: 16px;
    background-color: #D7D2EE;
    padding: 10px;
    display: grid;
    grid-template: repeat(auto-fit, minmax(50px, 0.5fr)) / 1fr;
    gap: 10px;
    align-items: center;
}

.announcement h3 {
    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: 400;
    font-size: 1.2rem;
}

.announcement p {
    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: 400;
}

.trending {
    border-style: solid;
    border-width: 0.5px;
    border-radius: 16px;
    padding: 10px;
    display: grid;
    grid-template: repeat(auto-fit, minmax(50px, 0.25fr)) / 1fr;
}

.feed {
    display: grid;
    grid-template: 1fr / 0.15fr 1fr;
}

